# SIL

./: .gitignore  CMakeLists.txt  LICENSE
include/: runable.hpp
include/common/: cmdline.h  types.h
include/detect/: detector.h
include/postprocess/: decode.h  postprocessor.h
include/preprocess/: preprocessor.h
include/recognise/: recogniser.h
include/track/: track.hpp  tracker.h
include/visualize/: visualization.h
src/: main.cpp  runable.cpp
src/detect/: detector.cpp
src/postprocess/: decode.cpp  postprocessor.cpp
src/preprocess/: preprocessor.cpp
src/recognise/: recogniser.cpp
src/track/: tracker.cpp
src/visualize/: visualization.cpp
